--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="d3dSetup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
