--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="d3dSetup.h" />
+    <ClInclude Include="types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
