Rename test project to test_dx_enumerate.

--- a/test_dx_enumerate/test_dx_enumerate.vcxproj
+++ b/test_dx_enumerate/test_dx_enumerate.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FC62A07D-554B-4CEC-96D7-68FF8552FA83}</ProjectGuid>
-    <RootNamespace>test</RootNamespace>
+    <RootNamespace>test_dx_enumerate</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>test_dx_enumerate</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
