Log window messages (for now)

--- a/lib/lib.vcxproj.filters
+++ b/lib/lib.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="msg_debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="d3dSetup.cpp">
