--- a/lib/lib.vcxproj
+++ b/lib/lib.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="d3dSetup.h" />
+    <ClInclude Include="msg_debug.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
