--- a/lib/lib.vcxproj.filters
+++ b/lib/lib.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="d3dSetup.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -33,15 +30,18 @@
     <ClInclude Include="d3d_window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="d3d_util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="d3dSetup.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="d3d_window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="d3d_util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
