--- a/lib/lib.vcxproj
+++ b/lib/lib.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="d3dx12.h" />
     <ClInclude Include="d3d_util.h" />
     <ClInclude Include="d3d_window.h" />
     <ClInclude Include="msg_debug.h" />
