--- a/lib/lib.vcxproj.filters
+++ b/lib/lib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="d3d_util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="d3dx12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="window.cpp">
