--- a/lib/lib.vcxproj.filters
+++ b/lib/lib.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClCompile Include="mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="geometry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
