--- a/lib/lib.vcxproj
+++ b/lib/lib.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="d3d_util.h" />
     <ClInclude Include="d3d_window.h" />
     <ClInclude Include="geometry.h" />
+    <ClInclude Include="math.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="msg_debug.h" />
     <ClInclude Include="stopwatch.h" />
@@ -34,6 +35,7 @@
     <ClCompile Include="d3d_util.cpp" />
     <ClCompile Include="d3d_window.cpp" />
     <ClCompile Include="geometry.cpp" />
+    <ClCompile Include="math.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="stopwatch.cpp" />
     <ClCompile Include="window.cpp" />
